add some verb and noun details

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -449,13 +449,13 @@ part in human life or otherwise.
 
 :::
 
-The other form of noun phrase (<HisyeoWord is='vos'/>) includes a subject or if one is not provided then,
-like a normal sentence, it should be intepreted as "there is" or "it is"
-depending on the predicate that is provided. This form of noun phrase is useful
-when you need to introduce a clause that changes (or removes) the subject from
-the underlying sentence. Some verbs primarily are used with some form of noun
-clause as their object and this form allows for a complete sentence to be
-included as that object.
+The other form of noun phrase (<HisyeoWord is='vos'/>) includes a subject or if
+one is not provided then, like a normal sentence, it should be intepreted as
+"there is" or "it is" depending on the predicate that is provided. This form of
+noun phrase is useful when you need to introduce a clause that changes (or
+removes) the subject from the underlying sentence. Some verbs primarily are used
+with some form of noun clause as their object and this form allows for a
+complete sentence to be included as that object.
 
 <HisyeoTabs>
   <p>noyo völun vos nimü völun noyo <em>"I want you to want me"</em></p>
