fix a few things in greetings lesson and add big "for" section in nouns reference doc.

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -16,7 +16,7 @@ How to say hello, introduce yourself and describe where you're from.
 ## Verbs & Gerunds.
 
 Meeting someone involves the verb <HisyeoWord is='monodo'/> and a usage of a
-subordinate clause. The subordinate clause acts similar to a
+subordinate clause (an inner sentence). The subordinate clause acts similar to a
 [gerund](https://en.wikipedia.org/wiki/Gerund) would in English, meaning that it 
 allows you to refer to the action of the verb as a noun.
 
@@ -56,7 +56,7 @@ Using this knowledge, we can build the first sentences for meeting people.
 ### Responding To A Greeting
 
 <HisyeoTabs>
-    <p>lı konxo.<em>Thank you.</em></p>
+    <p>lı konxo hön nimü.<em>Thank you.</em></p>
     <p>lı konxo pı ëto löicök. <em>Thank you so much.</em></p>
     <p>oxon noyo ütok. <em>For me also.</em></p>
     <p>lı xön ü do monodo nimü ütok. <em>It is nice to meet you too.</em></p>
