--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -179,6 +179,151 @@ marked noun phrase is either excluded from being the beneficiary/purpose of the
 committed act of the predicate or that the act itself was committed but with a
 beneficiary/purpose that is something other than the marked noun phrase.
 
+:::info The many faces of the English "for"
+
+There are many varying uses of the English word "for" and they don't all line up
+under <HisyeoWord is='oxon'/> so I'd like to take a moment to run through most of
+the interpretations that are in the [wiktionary
+entry](https://en.wiktionary.org/wiki/for).
+
+1. ⛔ Towards; in the direction of. 
+<HisyeoTabs>
+  <p>umo kösmö lı lö müt müësi. <em>The astronauts headed for the moon.</em></p>
+  <p>küu lı lö pı viki müt pümi töxütsı. <em>Run for the hills!</em></p>
+  <p>niün lı lö müt zınkon hön vos niün punyentoc si. <em>He was headed for the door when he remembered.</em></p>
+</HisyeoTabs>
+2. ✅ Directed at; intended to belong to.
+<HisyeoTabs>
+  <p>noyo yünyoü vın oxon nimü <em>I have something for you.</em></p>
+</HisyeoTabs>
+3. ✅ In order to help, benefit, gratify, honor etc. (someone or something). 
+<HisyeoTabs>
+  <p>hön möi vın vos niün tüu ü niün tüu oxon nimü. <em>Everything I do, I do for you.</em></p>
+  <p>nü yünyoü lono kon lözic oxon umo Zenıt. <em>We're having a birthday party for Janet.</em></p>
+  <p>öni pöklön cüdo si köto in ondo oxon köndodü kon cüdo. <em>The mayor gave a speech for the charity gala.</em></p>
+</HisyeoTabs>
+4. ✅ Befitting of someone’s beliefs, needs, wants, skills, or tastes; best suited to.
+<HisyeoTabs>
+  <p>hön vos do wëko mokon hoi zuko pı dündon, lı eswen en vos nimü köi culono, pinë wëloı övo oxon yök nimü. <em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
+</HisyeoTabs>
+5. ✅ To be used or treated in a stated way, or with a stated purpose.
+<HisyeoTabs>
+  <p>övo lı gongoxi ülögun nëös oxon oütö gisgül noyo. <em>This is a new bell for my bicycle.</em></p>
+  <p>piek süwit onö oxon köndodü üsën yë umo Tomu moliyü Helen. <em>The cake is for Tom and Helen's anniversary.</em></p>
+  <p>küöxı övo hoi övo oxon do mokon. dizel oxon do lı ëo vonmot. <em>These apples here are for eating. The rest are for throwing away.</em></p>
+</HisyeoTabs>
+6. ✅ Supporting, in favour of. (Antonym: against)
+<HisyeoTabs>
+  <p>noi möi umo do oxon pësnëhot, küu lı ëo lö pı mulö ölë züngö. <em>All those for the motion, raise your hands.</em></p>
+  <p>zık oxon mozün pukü. <em>Who's for ice-cream?</em></p>
+  <p>noyo oxon do lı lö vio oütö kiskö. <em>I'm for going by train.</em></p>
+  <p>dus göcidon oxon moliyü son dën. <em>Ten voted for, and three against. (with implied object)</em></p>
+</HisyeoTabs>
+7. ⛔ Because of. 
+<HisyeoTabs>
+  <p>niün moskül pit köto yök do zütö, moliyü nënko ulyö ü niün wohi pëmon yök do lı yöüli müt niün moskül.<em>He wouldn't apologize; and just for that, she refused to help him.</em></p>
+  <p>niün lı xoinpo pı dëko pı eswen xön nënko do nocido si pügot.  <em>He looks better for having lost weight. (UK usage)</em></p>
+  <p>noyo süko niün nënko ëto mötivö. <em>I like her for lots of reasons.</em></p>
+</HisyeoTabs>
+8. ✅ Intended to cure, remove or counteract; in order to cure, remove or counteract.
+<HisyeoTabs>
+  <p>cigilsu in mokon oxon hüstun nimü. <em>This medicine is for your cough.</em></p>
+  <p>noyo puswen do ıspulyol voko tikü hoi nıwos oxon müxi mitmo nomü. <em>I need to spray my house for termites.</em></p>
+</HisyeoTabs>
+9. ⛔ Over (a period of time). 
+<HisyeoTabs>
+  <p>noyo nıwos hoi övo lon son üsën. <em>I've lived here for three years.</em></p>
+  <p>niün köntësto lon yoüti lono hön nüyo kon cukto mitetën. <em>They fought for days over a silly pencil.</em></p>
+</HisyeoTabs>
+10. ⛔ Throughout or across (a distance in space). 
+<HisyeoTabs>
+  <p>noyo köi dëko lon yoüti öni kut cënpö yë zoük. <em>I can see for miles.</em></p>
+</HisyeoTabs>
+11. ⛔ Used to introduce a subject of a to-infinitive clause.
+<HisyeoTabs>
+  <p>vos öni vıyüxit nü cüdo yök muni oksiös nü, lı yök üsowo. <em>It is unreasonable for our boss to withhold our wages.</em></p>
+  <p>pı tölki ü noyo völun vos nimü lı xowosë. <em>All I want is for you to be happy.</em></p>
+</HisyeoTabs>
+12. ✅ On behalf of.
+<HisyeoTabs>
+  <p>noyo celël cızi oxon niün. <em>I will stand in for him.</em></p>
+  <p>noyo köto oxon öni pöklön wik.<em>I speak for the Prime Minister.</em></p>
+</HisyeoTabs>
+13. ⛔ In the role or capacity of; instead of; in place of.
+<HisyeoTabs>
+  <p>noyo yön dinci yë kudüdo hülü mıslı miëpıl kon conzodo. <em>I used a hay bale for a bed.</em></p>
+  <p>niün yünyoü ünvünö ziziyo mıslı düuncit. <em>He's got a turnip for a brain.</em></p>
+</HisyeoTabs>
+14. ⛔ In exchange for; in correspondence or equivalence with. 
+<HisyeoTabs>
+  <p>noyo döstoc tiü viyën muni nënko do celël oütö nokdo voxo. <em>I got five hundred pounds for that old car!</em></p>
+</HisyeoTabs>
+15. ✅ In order to obtain or acquire.
+<HisyeoTabs>
+  <p>noyo pelëxu oxon mülü do hoi könyëc küngiyo yë lono cınöpu. <em>I am aiming for completion by the end of business Thursday.</em></p>
+  <p>niün pëüdo oxon cëo yë mulö ëto. <em>He's going for his doctorate.</em></p>
+  <p>nimü völun do lı lö oxon iskö ülzo ko. <em>Do you want to go for coffee?</em></p>
+  <p>umo do nıwos hoi möi poxö yë küöcyo Elovo, diyondë si umo Delvi oxon zuwopü. <em>People all over Greece looked to Delphi for answers.</em></p>
+  <p>nimü köi lı lö müt guvuyo oxon yoüti hüwu ko. <em>Can you go to the store for some eggs?</em></p>
+  <p>noyo wëko muni pı söpo oxon oütö. <em>I'm saving up for a car.</em></p>
+  <p>küu motsı yök oxon zuwopü. <em>Don't wait for an answer.</em></p>
+  <p>niün sölü müt nimü oxon zık. <em>What did he ask you for?</em></p>
+</HisyeoTabs>
+16. ⛔ By the standards of, usually with the implication that those standards are lower than one might otherwise expect; considering.
+<HisyeoTabs>
+  <p>lı üsowo hön lono nı. <em>Fair for its day.</em></p>
+  <p>niün lı kiösö hön umo wohi nokdo. <em>She's spry for an old lady.</em></p>
+  <p>niün lı ovinë ëto hön düi üsën yë nokdo. <em>He's very mature, for a two-year-old.</em></p>
+</HisyeoTabs>
+17. ⛔ To be, or as being. 
+<HisyeoTabs>
+  <p>küu konzilü noyo mıslı umo göwo. <em>Don't take me for a fool.</em></p>
+</HisyeoTabs>
+18. ⛔ (usually in the phrase 'for all') Despite, in spite of. 
+<HisyeoTabs>
+  <p>hön möi kon pëüdo niün yë ëto wilüwo lı yök xoinpo ü vos niün lı colot ëto.<em>For all his expensive education, he didn't seem very bright.</em></p>
+</HisyeoTabs>
+19. ✅ Indicating something desired or anticipated. 
+<HisyeoTabs>
+  <p>oxon nıxin yë timiok pipök löicök. <em>O for the wings of a dove.</em></p>
+  <p>oxon nıxin vos lı lö vio nu. <em>Ah! for wings to soar …</em></p>
+  <p>hön ipüdü oxon cöüvon yë cëo kut ze. <em>And now for a slap-up meal!</em></p>
+</HisyeoTabs>
+20. ⛔ (in expressions such as 'for a start') Introducing the first item(s) in a potential sequence .
+<HisyeoTabs>
+  <p>tüu kon dodë yë woyü in pesol nu. hön kut vın ü noyo köi dodë yök löicök. <em>Go scuba diving? For one thing, I can't even swim.</em></p>
+  <p>hön dizel nü yünyoü yök ozüul yön. <em>For another, we don't have any equipment.</em></p>
+</HisyeoTabs>
+21. ✅ (with names, chiefly US) In honor of; after.
+<HisyeoTabs>
+  <p>somo müt niün oxon motüo motüo niün. <em>He is named for his grandfather.</em></p>
+</HisyeoTabs>
+22. ⛔ (UK) Due for or facing (a certain outcome or fate).
+<HisyeoTabs>
+  <p>niün lı ëo kopüt pı mülü ölë mëdüson in ondo ulyö. pı ipüdü niün pono do nocido wëloı niün löicök. <em>He totally screwed up that project. Now he's surely for the sack.</em></p>
+</HisyeoTabs>
+23. ⛔ (chiefly US) Out of; used to indicate a fraction, a ratio
+<HisyeoTabs>
+  <p>hön öni kut yë kon xopo poxö ü umo Zönsı lı si son vun nonkü hoi lono. <em>In terms of base hits, Jones was three for four on the day.</em></p>
+</HisyeoTabs>
+24. ⛔ (cricket) Used as part of a score to indicate the number of wickets that have fallen.
+<HisyeoTabs>
+  <p>hoi könyëc yë kelo ü küöcyo Ingulındu lı son viyën tiü vun son. <em>At close of play, England were 305 for 3.</em></p>
+</HisyeoTabs>
+25. ⛔ Used in various more-or-less idiomatic ways to construe individual verbs, indicating various semantic relationships such as target, purpose, result, etc.; see also the entries for individual phrasal verbs, e.g. ask for, look for, stand for, etc.
+<HisyeoTabs>
+  <p>do lı ëo wuktomü ölë poxö vos umo lı si gö hoi <em>to account for one's whereabouts</em></p>
+  <p>do diyondë umo litıwe <em>to care for a relative</em></p>
+  <p>do wovok xön möi düi <em>to settle for second best</em></p>
+  <p>do cülosun voüt <em>to allow for mistakes</em></p>
+</HisyeoTabs>
+26. ✅ (nonstandard) So (that), in order to
+<HisyeoTabs>
+  <p>niün gomi si woküt kon wëloı do gıtno lono moliyü pıtün, oxon vos niün köi döstoc eswen woküt otıkon. <em>He took the swing shift for he could get more overtime.</em></p>
+</HisyeoTabs>
+
+:::
+ 
 ### Cause
 
 The <HisyeoWord is='nënko'/> particle precedes this noun phrase.
