fixes to new section

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -190,7 +190,7 @@ entry](https://en.wiktionary.org/wiki/for).
 <HisyeoTabs>
   <p>umo kösmö lı lö müt müësi. <em>The astronauts headed for the moon.</em></p>
   <p>küu lı lö pı viki müt pümi töxütsı. <em>Run for the hills!</em></p>
-  <p>niün lı lö müt zınkon hön vos niün punyentoc si. <em>He was headed for the door when he remembered.</em></p>
+  <p>niün lı lö müt zınkon hön woküt vos niün punyentoc si hoi. <em>He was headed for the door when he remembered.</em></p>
 </HisyeoTabs>
 2. ✅ Directed at; intended to belong to.
 <HisyeoTabs>
@@ -198,37 +198,37 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 3. ✅ In order to help, benefit, gratify, honor etc. (someone or something). 
 <HisyeoTabs>
-  <p>hön möi vın vos niün tüu ü niün tüu oxon nimü. <em>Everything I do, I do for you.</em></p>
-  <p>nü yünyoü lono kon lözic oxon umo Zenıt. <em>We're having a birthday party for Janet.</em></p>
-  <p>öni pöklön cüdo si köto in ondo oxon köndodü kon cüdo. <em>The mayor gave a speech for the charity gala.</em></p>
+  <p>hön möi vın vos noyo tüu, ü noyo tüu oxon nimü. <em>Everything I do, I do for you.</em></p>
+  <p>nü yünyoü köndodü yë lono kon lözic oxon umo Zëenıt. <em>We're having a birthday party for Janet.</em></p>
+  <p>öni pöklön cüdo si köto in ondo oxon köndodü kon cüdo yöüli. <em>The mayor gave a speech for the charity gala.</em></p>
 </HisyeoTabs>
 4. ✅ Befitting of someone’s beliefs, needs, wants, skills, or tastes; best suited to.
 <HisyeoTabs>
-  <p>hön vos do wëko mokon hoi zuko pı dündon, lı eswen en vos nimü köi culono, pinë wëloı övo oxon yök nimü. <em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
+  <p>hön vos do wëko mokon hoi zuko pı dündon, lı eswen en vos nimü köi tüu, pinë wëloı övo oxon yök nimü. <em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
 </HisyeoTabs>
 5. ✅ To be used or treated in a stated way, or with a stated purpose.
 <HisyeoTabs>
   <p>övo lı gongoxi ülögun nëös oxon oütö gisgül noyo. <em>This is a new bell for my bicycle.</em></p>
-  <p>piek süwit onö oxon köndodü üsën yë umo Tomu moliyü Helen. <em>The cake is for Tom and Helen's anniversary.</em></p>
+  <p>piek süwit onö oxon köndodü yë üsën dizël yë umo Tomu moliyü Helen. <em>The cake is for Tom and Helen's anniversary.</em></p>
   <p>küöxı övo hoi övo oxon do mokon. dizel oxon do lı ëo vonmot. <em>These apples here are for eating. The rest are for throwing away.</em></p>
 </HisyeoTabs>
 6. ✅ Supporting, in favour of. (Antonym: against)
 <HisyeoTabs>
-  <p>noi möi umo do oxon pësnëhot, küu lı ëo lö pı mulö ölë züngö. <em>All those for the motion, raise your hands.</em></p>
+  <p>noi möi umo do oxon pësnëhot, küu lı ëo lö pı mulö ölë züngö nimü. <em>All those for the motion, raise your hands.</em></p>
   <p>zık oxon mozün pukü. <em>Who's for ice-cream?</em></p>
   <p>noyo oxon do lı lö vio oütö kiskö. <em>I'm for going by train.</em></p>
-  <p>dus göcidon oxon moliyü son dën. <em>Ten voted for, and three against. (with implied object)</em></p>
+  <p>dus göcidon si oxon moliyü son dën. <em>Ten voted for, and three against. (with implied object)</em></p>
 </HisyeoTabs>
 7. ⛔ Because of. 
 <HisyeoTabs>
-  <p>niün moskül pit köto yök do zütö, moliyü nënko ulyö ü niün wohi pëmon yök do lı yöüli müt niün moskül.<em>He wouldn't apologize; and just for that, she refused to help him.</em></p>
-  <p>niün lı xoinpo pı dëko pı eswen xön nënko do nocido si pügot.  <em>He looks better for having lost weight. (UK usage)</em></p>
+  <p>niün moskül pit köto yök vos niün zütö nı, moliyü nënko ulyö ü niün wohi pëmon yök do lı yöüli müt niün moskül.<em>He wouldn't apologize; and just for that, she refused to help him.</em></p>
+  <p>niün lı xoinpo pı dëko pı xön eswen nënko do nocido si pügot.  <em>He looks better for having lost weight. (UK usage)</em></p>
   <p>noyo süko niün nënko ëto mötivö. <em>I like her for lots of reasons.</em></p>
 </HisyeoTabs>
 8. ✅ Intended to cure, remove or counteract; in order to cure, remove or counteract.
 <HisyeoTabs>
   <p>cigilsu in mokon oxon hüstun nimü. <em>This medicine is for your cough.</em></p>
-  <p>noyo puswen do ıspulyol voko tikü hoi nıwos oxon müxi mitmo nomü. <em>I need to spray my house for termites.</em></p>
+  <p>noyo puswen do ıspulyol nozi hoi nıwos oxon müxi mitmo nomü. <em>I need to spray my house for termites.</em></p>
 </HisyeoTabs>
 9. ⛔ Over (a period of time). 
 <HisyeoTabs>
@@ -242,7 +242,7 @@ entry](https://en.wiktionary.org/wiki/for).
 11. ⛔ Used to introduce a subject of a to-infinitive clause.
 <HisyeoTabs>
   <p>vos öni vıyüxit nü cüdo yök muni oksiös nü, lı yök üsowo. <em>It is unreasonable for our boss to withhold our wages.</em></p>
-  <p>pı tölki ü noyo völun vos nimü lı xowosë. <em>All I want is for you to be happy.</em></p>
+  <p>noyo pı tölki völun vos nimü lı xowosë. <em>All I want is for you to be happy.</em></p>
 </HisyeoTabs>
 12. ✅ On behalf of.
 <HisyeoTabs>
@@ -252,7 +252,7 @@ entry](https://en.wiktionary.org/wiki/for).
 13. ⛔ In the role or capacity of; instead of; in place of.
 <HisyeoTabs>
   <p>noyo yön dinci yë kudüdo hülü mıslı miëpıl kon conzodo. <em>I used a hay bale for a bed.</em></p>
-  <p>niün yünyoü ünvünö ziziyo mıslı düuncit. <em>He's got a turnip for a brain.</em></p>
+  <p>niün yünyoü ünvünö ziziyo mıslı vos celël düuncit niün oxon nı. <em>He's got a turnip for a brain.</em></p>
 </HisyeoTabs>
 14. ⛔ In exchange for; in correspondence or equivalence with. 
 <HisyeoTabs>
@@ -271,27 +271,27 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 16. ⛔ By the standards of, usually with the implication that those standards are lower than one might otherwise expect; considering.
 <HisyeoTabs>
-  <p>lı üsowo hön lono nı. <em>Fair for its day.</em></p>
+  <p>lı üsowo hön woküt nı. <em>Fair for its day.</em></p>
   <p>niün lı kiösö hön umo wohi nokdo. <em>She's spry for an old lady.</em></p>
   <p>niün lı ovinë ëto hön düi üsën yë nokdo. <em>He's very mature, for a two-year-old.</em></p>
 </HisyeoTabs>
 17. ⛔ To be, or as being. 
 <HisyeoTabs>
-  <p>küu konzilü noyo mıslı umo göwo. <em>Don't take me for a fool.</em></p>
+  <p>küu konzilü yök noyo mıslı umo göwo. <em>Don't take me for a fool.</em></p>
 </HisyeoTabs>
 18. ⛔ (usually in the phrase 'for all') Despite, in spite of. 
 <HisyeoTabs>
-  <p>hön möi kon pëüdo niün yë ëto wilüwo lı yök xoinpo ü vos niün lı colot ëto.<em>For all his expensive education, he didn't seem very bright.</em></p>
+  <p>hön möi kon pëüdo niün yë wilüwo ëto lı yök xoinpo ü vos niün lı colot ëto.<em>For all his expensive education, he didn't seem very bright.</em></p>
 </HisyeoTabs>
 19. ✅ Indicating something desired or anticipated. 
 <HisyeoTabs>
-  <p>oxon nıxin yë timiok pipök löicök. <em>O for the wings of a dove.</em></p>
+  <p>oxon nıxin yë timiok pipök. <em>O for the wings of a dove.</em></p>
   <p>oxon nıxin vos lı lö vio nu. <em>Ah! for wings to soar …</em></p>
   <p>hön ipüdü oxon cöüvon yë cëo kut ze. <em>And now for a slap-up meal!</em></p>
 </HisyeoTabs>
 20. ⛔ (in expressions such as 'for a start') Introducing the first item(s) in a potential sequence .
 <HisyeoTabs>
-  <p>tüu kon dodë yë woyü in pesol nu. hön kut vın ü noyo köi dodë yök löicök. <em>Go scuba diving? For one thing, I can't even swim.</em></p>
+  <p>tüu kon dodë vio woyü in pesol nu. hön kut vın ü noyo köi dodë yök löicök. <em>Go scuba diving? For one thing, I can't even swim.</em></p>
   <p>hön dizel nü yünyoü yök ozüul yön. <em>For another, we don't have any equipment.</em></p>
 </HisyeoTabs>
 21. ✅ (with names, chiefly US) In honor of; after.
@@ -300,7 +300,7 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 22. ⛔ (UK) Due for or facing (a certain outcome or fate).
 <HisyeoTabs>
-  <p>niün lı ëo kopüt pı mülü ölë mëdüson in ondo ulyö. pı ipüdü niün pono do nocido wëloı niün löicök. <em>He totally screwed up that project. Now he's surely for the sack.</em></p>
+  <p>niün lı ëo kopüt pı mülü ölë mëdüson in ondo ulyö. niün pı ipüdü pono do nocido wëloı niün löicök. <em>He totally screwed up that project. Now he's surely for the sack.</em></p>
 </HisyeoTabs>
 23. ⛔ (chiefly US) Out of; used to indicate a fraction, a ratio
 <HisyeoTabs>
