added more noun prep examples

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -159,7 +159,27 @@ that is something other than the marked noun phrase.
 The <HisyeoWord is='sün'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent where the action originated. In
-English, this represents some of the senses of the word "from".
+English, this represents nearly all of the senses of the word "from" (except for
+differentiation and causation).
+
+<HisyeoTabs>
+  <p>noyo döstoc lipü in luvono sün sıskın moskül noyo. <em>I got a letter from my brother.</em></p>
+  <p>nimü köi döstoc yök vısun nëös sün nec öni tüek nucoto. <em>You can't get all your news from the Internet.</em></p>
+  <p>tömös övo sün dus eson tukwos dus. <em>This manuscript is from the 1980s.</em></p>
+  <p>niün yünyoü si tömös do hoı zomo mulö sün sokovü müt sopoi. <em>He had books piled from floor to ceiling.</em></p>
+  <p>niün lı si cok hoi lono xopëk sün sınsi Xıkogö. <em>He departed yesterday from Chicago.</em></p>
+  <p>küu pono pı öpöstü sün pëlëtë. <em>Face away from the wall!</em></p>
+  <p>lono kon wëloı sün suhot eson müt suhot tiü.<em>The working day runs from 9 am to 5 pm.</em></p>
+  <p>köi celël oxon doinpi sün lono dus xëti yë wuto xëti. <em>Tickets are available from 17th July.</em></p>
+  <p>düstu tönkö nimü sün kut müt dus. <em>Rate your pain from 1 to 10.</em></p>
+  <p>küu socok do köto mikdol sün kut. <em>Start counting from 1.</em></p>
+  <p>nimü köi pëüdo ozüul sün söhoük müt kon cukto. <em>You can study anything from math to literature.</em></p>
+  <p>küu dënëmëk do dëko nı sün pındü niün yë dëko. <em>Try to see it from his point of view.</em></p>
+  <p>sün mulö yë nıwos küon ü nimü pı yoüti köi dëko pümi yë cënpö möi. <em>From the top of the lighthouse you can just see the mainland.</em></p>
+  <p>düi dus sün son dus kut di önsu. <em>20 from 31 leaves 11.</em></p>
+  <p>lipü gelmıs yë voko mevüs lono pı yotkuwo pön do lı mevüs sün lozö yë pinton lono. <em>A parasol protects from the sun's rays.</em></p>
+  <p>köson nı sün ülögun nulun sëlpö sovin. <em>It's made from pure gold.</em></p>
+</HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the source or origin of the
@@ -173,11 +193,6 @@ The <HisyeoWord is='oxon'/> particle precedes this noun phrase.
 This role is used for NPs that represent for whose benefit the action occurs or
 the reason for the action. In English, this represents some of the senses of the
 word "for".
-
-When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
-marked noun phrase is either excluded from being the beneficiary/purpose of the
-committed act of the predicate or that the act itself was committed but with a
-beneficiary/purpose that is something other than the marked noun phrase.
 
 :::info The many faces of the English "for"
 
@@ -323,6 +338,13 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 
 :::
+
+When <HisyeoWord is='oxon'/> used with the negatitive particle <HisyeoWord is='yök'/>,
+it means that the marked noun phrase is either excluded from being the
+beneficiary/purpose of the committed act of the predicate or that the act itself
+was committed but with a beneficiary/purpose that is something other than the
+marked noun phrase.
+
  
 ### Cause
 
