Update intro language

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -22,12 +22,9 @@ Additionally, the grammar is considered an analytic isolating language like its
 forebears [Kokanu](https://www.kokanu.com/) and [Toki
 Pona](https://tokipona.org). Analytic isolating languages like these remove the
 mutation of words by making grammatical syntax separate particle words. The
-grammar design is considered a *semi-exception* to the neutrality principle  due
-to the requirement that a language has a cohesive grammatical system with a set
-of standard conventions (and also partly due to the other pricniple of
-expressivity necessitated there being some additional grammar added). That said,
-the grammar helps to make Hisyëö less ambiguous overall which supports the
-neutrality principle indirectly in some respects.
+grammar might be more complex than some minimalist languages but the design is
+intented to help make Hisyëö less ambiguous overall which supports the
+neutrality and expressivity principles.
 - **Succinctness**, words are kept to a minimum where possible but information
 density is strongly emphasized so that the language can still be used for
 translations of scientific and artistic media. This principle is not the same as
@@ -38,39 +35,40 @@ otherwise derail a sentence from comprehension due to the added working memory
 to develop an understanding of the sentence. Careful consideration is made that
 the semantic spaces that each individual word covers do not overlap other words
 although there will be times where you can build a similar concept by using
-compound phrases and this is okay and even useful for providing additional ways
-to clarify.
+compound phrases and this is okay and provides users with additional ways to
+clarify their intended meaning.
 - **Expressivity**, the language is designed to be highly expressive in its word
 and grammar choices. With just over 800 words, there's a lot more ways to
 express feelings, emotions, objects, actions and anything else you can think of.
-Additionally, the grammar has been enhanced to allow for less ambiguous handling
-of tense, aspect, mood, causation, and volition. The language has been tested
-against a multitude of translation media to confirm that no concept is too
-challenging or too verbose to express.
+Additionally, the grammar has changed considerably from its origin to allow for
+handling of tense, aspect, mood, causation, and volition. The language has been
+tested against a multitude of translation media to confirm that no concept is
+too challenging or too verbose to express.
 
 Some of these principles and the language features that you will learn may seem
-contrary to the practices of any self respecting [International Auxiliary
+contrary to the practices of any self-respecting [International Auxiliary
 Language](http://interlanguages.net). Hisyëö does not strictly follow the
-tradional principles. Too much effort within IAL development is spent on
-regularization and cherrypicking existing lexical and grammatical tactics of
-natural languages (while applying some first language bias regardless of the
-best intentions). Instead, Hisyëö pushes closer to an
+tradional principles. The creators believe that too much effort within IAL
+development is spent on regularization and cherrypicking existing lexical and
+grammatical tactics of natural languages (while applying some first language
+bias regardless of the best intentions). Instead, Hisyëö pushes closer to an
 [artlang](https://en.wikipedia.org/wiki/Artistic_language) or a
 [loglang](https://loglangs.wiki/Portal) by focusing less on ease-of-learning and
 instead striving for a more complete linguistic system.
 
-:::caution International Auxiliary Languages
+## Is Hisyëö An International Auxiliary Language?
 
-It is the belief of the Hisyëö creators that the mission of an IAL to be a
-widely adopted secondary language for everyone, is both farfetched and even
-slightly dangerous--is purity of values enough to counteract the viral, or
-rather *colonial*, nature of practicing a non-local language in the public or on
-the internet? Hisyëö accepts its place as a showpiece of absurdity by being both
-serious and artistic. It isn't designed with the intention of acquiring all
-world speakers but we hope that Hisyëö's cultural identity and ethos will draw
-the right people to carve out a small piece of universe for us.
+Hisyëö **does not** intend to be an international auxiliary language. Instead,
+it strives to be a diverse community of people that seek to create a culture of
+acceptance, respect, love, nonconformity and creativity. Through the language
+and activities of the servers, chat rooms and local events, we hope to *reenact*
+the future state of humanity. A [living history](https://en.wikipedia.org/wiki/Living_history) of
+the future, if you will.
 
-:::
+We do not condone the colonization or assimilation of peoples but we believe
+that the current cultures of our world are designed to isolate us into nation
+states to fund the machinations of capitalists and despots. Therefore, we
+respectfully seek to timeskip our way into a future all-human society.
 
 ## Where did Hisyëö come from?
 
@@ -81,8 +79,8 @@ Unfortunately for him, the Kokanu community intends the language to be as
 minimalist as possible and so the density of information when translating is not
 a consideration. Neither translation of media nor scientific communication are
 goals of the language. Having spent considerable time becoming fluent in Kokanu
-and being inspired by a new kokanido
-([koanu](https://www.parallax.net.nz/x/koanu/)) at the time, this Kokanu
+and being inspired by an—at the time—new kokanido
+([koanu](https://www.parallax.net.nz/x/koanu/)), this Kokanu
 community member decided to try to create his own kokanido, enhancing it with
 some ideas taken from other constructed and natural languages.
 
