improve some basic noun explanations

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -47,22 +47,23 @@ semantic interpretation as the voluntary subject particle.
 
 ### Patient, Theme, Stimulus (Direct Object)
 
-The <HisyeoWord is='cö'/> particle precedes this noun phrase.
+No particle precedes this noun phrase, instead it exists immediately following
+the verb that is being used. Verbs act like prepositions when they are preceded
+by verb markers or no marker at all.
 
-This role is used in predicates with transitive verbs that have an argument. The
-argument can represent a *patient* (an entity that undergoes the action and
-changes state), a *theme* (an entity that undergoes the action but does not
-change state), or a *stimulus* (an entity that prompts sensory or emotional
-feeling). In English, this represents some of the senses of the word "to" and
-"into" (many English verbs don't rely on a preposition particle to
-introduce their direct object).
+The role of this object is for the special thematic argument to transitive
+verbs. The argument (the direct object) can be broken down into sub-types: a
+*patient*, a *theme*, or a *stimulus*. In English, this represents some of the
+senses of the word "to" and "into" (many English verbs don't rely on a
+preposition particle to introduce their direct object).
 
 :::caution Base Verbs Without This Particle
 
 Not using this particle can have an impact on how base verb sentences are
 interpreted. Without providing a direct object, a base verb is interpreted as
 being *intransitive* or in an unthematic and generic manner (since no theme is
-being provided).
+being provided). That being said, sometimes it's easiest to just think of an
+implicit <HisyeoWord is='nı'/> existing in the direct object slot.
 
 :::
 
@@ -71,10 +72,7 @@ manner. A **theme** is an entiy that undergoes the action but doesn't change
 state. A **stimulus** is an entity that prompts or triggers the emotional or
 sensory action that is being described. These kinds of direct objects aren't
 separately marked because which kind of object is being specified can be
-determined from the verb that is being used. The only thing that you must
-remember is that only base verbs can take a preposition of this kind. **A
-sentence with a base modifier or base noun being used as a verb cannot contain
-this preposition.**
+determined from the verb that is being used.
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the argument of the committed
@@ -95,12 +93,12 @@ carried out. In English, this represents some of the senses of the words "with",
 This preposition and the remaining described here can be used with intransitive
 and transitive verb predicates and are only needed in certain circumstances when
 extra thematic information is useful to describing the predicate in a new way.
-These prepositions are known as **true thematic relations**. Subjects and
-objects are honorary members of the thematic relation club since they are
-usually called **morphosyntactic arguments**. They are included in the same
-class of word as the true thematic relations to simplify the grammatical system.
-This system is what allows the language to have complete **free constituent
-ordering**.
+These prepositions are known as **true thematic relations**. Subjects
+(<HisyeoWord is='ü'/> or <HisyeoWord is='ölë'/>) are honorary members of the
+thematic relation club since they are usually called **morphosyntactic
+arguments**. They are included in the same class of word as the true thematic
+relations to simplify the grammatical system. This system is what allows the
+language to have **free constituent ordering**.
 
 :::
 
