Add a bunch of verb doc details.

--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -39,49 +39,146 @@ introduced into the sentence.
 
 ## Prepositions
 
-🚧 Old Grammar Below 🚧
-
 ### Realis
 
-The most basic form of verbal preposition is the realis form. Using this verb
-particle (<HisyeoWord is='lı'/>) means that your verb is a true statement of an
-action or state that occurred or was experienced in reality. They can be in the
-past, present or future tense but they are, by default, considered to be
-imperfective and not perfect
+The most basic form of verbal preposition is the realis form. There is no
+prepositional particle when this form is used. When there is no particle
+attached to the verb, it means that it is a true (or believed to be true)
+statement of an action or state that is occurring or is being experienced *in
+reality*. These predicates can be in the past, present or future tense but they
+are usually considered to be imperfective and not perfect (since there is a
+particle that can specify that the action is perfect).
 
-:::tip Skip the Particle
-
-If you start your sentence with this form of verb, you don't need to have a
-leading particle. It is implied automatically when a sentence begins without a
-particle.
-
-:::
-
-
+<HisyeoTabs>
+    <p>hoi woküt zık ü nü mokon hoi pıtün cokyen övo.  <em>What time are we eating this evening?</em></p>
+    <p>vonolon lunsol ipüwë müt noyo.  <em>The monkey is throwing rocks at me.</em></p>
+</HisyeoTabs>
 
 ### Irrealis
 
 There are a few different irrealis verb markers that allow for a variety of
 different moods indicating that the predicate has not occurred (or isn't known
-to have). 
+to have). They precede the verb and are considered prepositions.
 
 #### Epistemic (*what could be*)
 
-This irrealis verb marker (<HisyeoWord is='köi'/>) indicates that the
-predicate *could* or *might* happen. This marker tells you that the
-speaker/writer either believes or has knowledge that the predicate may occur but
-isn't confident that this future reality is assured or that the possibility of
-it occurring doesn't necessitate that it will be.
+This irrealis verb marker (<HisyeoWord is='köi'/>) indicates that the predicate
+*can*, *could*, *may*, or *might* happen. This marker tells you that the speaker/writer either
+believes or has knowledge that the predicate may occur but isn't confident that
+this future reality is assured or that the possibility of it occurring doesn't
+necessitate that it will be. It can also be used in past tense to mean that the
+possibility of it occurring in the past was likely or that there is knowledge
+that the subject was definitely capable of completing the action. When used to
+frame the predicate of a question, it has the effect of asking for permission.
+
+<HisyeoTabs>
+    <p>hoi ılık vos noyo lı dës dëko, ü noyo köi dëko pı xön ëto. <em>Before I was blind, I could see very well.</em></p>
+    <p>noyo goniso vos niün köi tüu nı hön vos niün völun pı hokiki. <em>I think he could do it if he really wanted to.</em></p>
+    <p>noyo xiwon do köi lı xikö ze. <em>I wish I could fly!</em></p>
+    <p>noyo köi yön öntön tetëk mulö pı ilxizuk ko. <em>Could I borrow your coat?</em></p>
+    <p>noyo köi sıtyo hoı ulyö ko. <em>May I sit there?</em></p>
+    <p>mocko yë umo Xılödingu köi lı gö yodo köi lı yök gö hoi dıpo dinci. <em>Schrödinger's cat may or may not be in the box</em></p>
+    <p>nimü köi köto si pı hüsü yë pökpün <em>You might have warned me about the thunderstorm.</em></p>
+    <p>noyo köi lı lö müt köndodü lëkın noyo göcidon si yök pı pıslon. <em>I might go to the party, but I haven't decided yet.</em></p>
+    <p>noyo köi lı gö hoi sıtyo küldü lëkin noyo pı yotkuwo völun vos wëilun müt noyo mıslı umo wohi. <em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
+    <p>noyo köi gomi piek potuk süwit vëlcin. <em>Might I take the last biscuit?</em></p>
+    <p>nü köi puswen vın do lı len eswen yoüti ci. <em>Yeah, I think we might need something a bit sturdier.</em></p>
+    <p>nimü köi tenkin ulyö ko. <em>Can you hear that?</em></p>
+    <p>niün köi köto vio hiskünco Ingulıc, Vulonsë, moliyü Döic. <em>She can speak English, French, and German.</em></p>
+</HisyeoTabs>
 
 #### Conditional (*what would be*)
 
-The conditional verb marker (%%pit@pit%%/%%ʋ̆ɟ@pit%%) indicates that the
+The conditional verb marker (<HisyeoWord is='pit'/>) indicates that the
 predicate occurring is dependent on some other circumstance that is either
 explicitly described or implied.
 
+<HisyeoTabs>
+    <p>hoi lono kut yë poxö kon pëüdo ü noyo monodo umo wohi do pit di hünsüon noyo. <em>On my first day at University, I met the woman who would become my wife.</em></p>
+    <p>hön vos noyo lı pilüs hoi do köntësto oxon yoküntik, ü noyo pit cüdo vun düi muni müt küngiyo yöüli. <em>If I won the lottery, I would give half the money to charity.</em></p>
+    <p>noyo pit yüpik do lı lö monodo. <em>I would love to come and visit.</em></p>
+    <p>küu dëko piek süwit yë sopölë xön ëto ze. noyo pit mokon möi ulyö pı mülü ze. <em>Look at that yummy cake! I would eat that all up!</em></p>
+    <p>noyo müt nimü pit sölü do sityo pı koli. <em>I would ask you all to sit down.</em></p>
+    <p>noyo müt goniso vos niün lı si cok pı ılık. <em>I would imagine that they have already left.</em></p>
+    <p>niün lı köxentë yë mevüs oxon vos niün pit punyentoc si do pesol zınkon. <em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
+    <p>niün pit lı gö hoi sınsi Lundun pı ipüdü cokyen. <em>They would be arriving in London round about now.</em></p>
+</HisyeoTabs>
+
+:::info The different conditional classifications of English
+
+In English, conditionals are broken down into types known as zero conditional,
+first conditional (or conditional I), second conditional (or conditional II),
+third conditional (or conditiona III), and mixed conditional. These different
+types are created with different tenses and auxiliaries in English and a similar
+differentiation of syntax occurs in Hisyëö.
+
+- **Zero conditional**: These conditionals are sentences that express a factual
+  implication instead of a hypothetical or potential future circumstance. They
+  do not use the conditional verb marker and either utilize the context marker (<HisyeoWord is='hön'/>)
+  or the time marker (<HisyeoWord is='hoi'/>) to indicate the condition.
+
+<HisyeoTabs>
+    <p>hön vos gongoxi öitun, lı mötö hoi poxö yë limien ilë. <em>If the alarm goes off, there's a fire somewhere in the building.</em></p>
+    <p>hön vos nimü lı ëo voüt, umo vısun ëo ölë nimü. <em>If you make a mistake, someone lets you know.</em></p>
+</HisyeoTabs>
+
+- **First conditional**: These conditionals are sentences thot regard the
+  consequences of a probable **future** event. They also do not use the
+  conditional verb marker and utilize the context marker (<HisyeoWord
+  is='hön'/>) or the time marker (<HisyeoWord is='hoi'/>) to indicate the
+  condition. The difference from Zero conditional sentences is the use of future
+  tense in the consequence. You can also use the perfective marker (<HisyeoWord
+  is='si'/>) or an imperative (<HisyeoWord is='küu'/>) on the consequence.
+
+<HisyeoTabs>
+    <p>hön vos niün sölü müt noyo, noyo ke vohoso pësnëhot niün pı diyondë ëto. <em>If he asks me, I will consider his proposal carefully.</em></p>
+    <p>hön vos nimü lı ëo voüt, umo ke vısun ëo ölë nimü. <em>If you make a mistake, someone will let you know.</em></p>
+    <p>hoi hüzon yë lono mutyu cıhöü küu lı lö müt poxö noyo. <em>If it rains this afternoon, come round to my place!</em></p>
+    <p>hön vos nimü lı cok ipüdü, nimü ke monodo  <em>If you leave now, you will still catch your train.</em></p>
+</HisyeoTabs>
+
+- **Second conditional**: These conditionals are sentences used to describe
+  hypothetical, and typically counterfactual, situations in the **present** or
+  **future** tense.
+
+<HisyeoTabs>
+    <p>hön vos noyo süko köndodü, ü noyo pit lı gö hoi eswen niün. <em>If I liked parties, I would attend more of them.</em></p>
+    <p>hön vos lı hüzon hoi lono uklo, ü umo pit lı cıvulo hoi titon. <em>If it rained tomorrow, people would dance in the street.</em></p>
+    <p>hön vos nimü lı cok pı ipüdü, ü nimü pı guvıs pit doicël oütö kiskö nimü. <em>If you left now, you would still catch your train.</em></p>
+</HisyeoTabs>
+
+- **Third conditional**: These conditionals are sentences used to describe
+  hypothetical, and typically counterfactual, situations in the **past** tense.
+  The condition clause is in the past perfect and the consequence is in
+  conditional perfect.
+
+<HisyeoTabs>
+    <p>hön vos nimü xokülü si noyo, ü noyo pit lı si lö. <em>If you had called me, I would have come.</em></p>
+    <p>niün pit lı si pilüs hön vos noyo lı si yöüli müt niün. <em>Would he have succeeded if I had helped him?</em></p>
+</HisyeoTabs>
+
+- **Mixed conditional**: These conditionals are a mixture of the second and
+  third classifications. Either the condition or the consequence, but not both,
+  has a past time reference. When the condition refers to the past, but the
+  consequence to the present, the condition clause is in the past perfect (as
+  with the Third conditional), while the main clause is in the conditional mood
+  (as in the Second conditional). When the consequence refers to the past, but
+  the condition is not expressed as being limited to the past, the condition
+  clause is expressed as in the second conditional (past, but not past perfect),
+  while the main clause is in the conditional perfect (as in the third
+  conditional).
+
+<HisyeoTabs>
+    <p>hön vos nimü tüu si wëloı pı dündon, nü pit yünyoü yök ixölö övo pı ipüdü.  <em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
+    <p>hön vos noyo lı si ëo hünsüon ölë umo Keli, noyo pit niwos yök hoi küöcyo Elvu pı ipüdü. <em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
+    <p>hön vos nü lı umo güexo pı ılik, nü pit tüu si yök nı mıslı ulyö. <em>If we were soldiers, we wouldn't have done it like that.</em></p>
+</HisyeoTabs>
+
+:::
+
 #### Deontic (*what should be*)
 
-Finally, we have the deontic verb marker (%%küu@küu%%/%%ɔʄɽʃ@küu%%) which is
+Finally, we have the deontic verb marker (<HisyeoWord is='küu'/>) which is
 indicates that the writer/speaker believes the predicate should or ought to be
 happen.
 
@@ -90,7 +187,7 @@ happen.
 There is a form of verbal preposition that is on a slightly different dimension
 from the realis/irrealis verb markers above. Instead of delineating the mood of
 the sentence, this marker indicates that the predicate will occur in the future.
-This marker (%%ke@ke%%/%%ɔɿ@ke%%) indicates what linguists call the **future
+This marker (<HisyeoWord is='ke'/>) indicates what linguists call the **future
 tense**.
 
 ## From...
@@ -99,10 +196,9 @@ Converting from the other content types into verbs.
 
 ### Nouns
 
-When a noun acts as a verb, it means that the predicate will be *copulative*,
-meaning that the verb is the English verb "be" followed by that noun. This is
-called a **noun complement**. The subject is being described as being some noun.
-This has the effect of meaning "is a [noun]" in English.
+A noun cannot act as a verb, it must be provided with the subject complement
+marker (<HisyeoWord is='lı'/>). This is called a **noun complement**. The subject is being described as
+being some noun. This has the effect of meaning "is a [noun]" in English.
 
 
 ### Modifiers
@@ -119,19 +215,19 @@ There are three **verb modifiers** that can be mixed-and-matched in a verb phras
 
 ### Negatitive
 
-The negatitive verb modifier (%%yök@yök%% / %%ɀ̑ı@yök%%) turns the verb phrase
+The negatitive verb modifier (<HisyeoWord is='yök'/>) turns the verb phrase
 into the negated version of itself. In English, this is the "not" adverb.
 
 ### Causative
 
-The causative verb modifier (%%ëo@ëo%% / %%ɽʇɽ@ëo%%) turns the verb phrase into
+The causative verb modifier (<HisyeoWord is='ëo'/>) turns the verb phrase into
 the causative version of itself. In English, this is often accomplished using
 the "to make" helper verb but sometimes there is a completely separate verb for
 the causative version of an action.
 
 ### Perfective
 
-The perfective verb modifier (%%si@si%% / %%ɐɟ@si%%) turns the verb phrase into
+The perfective verb modifier (<HisyeoWord is='si'/>) turns the verb phrase into
 the perfective version of itself. This describes the action as being a complete
 whole in contrast to the default aspect of verbs which is known as
 *imperfective*. There is no equivalent helper verb in English, sometimes the
